# protocol-specifications

./: COMMERCIAL_LICENSE_AGREEMENT.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  EXECUTIVE_SUMMARY.md  MANIFESTO.md  PROGRESS.md  PROJECTS.md  PROJECT_CHARTER.md  README.md  ROYALTY_CONFIG.txt  SMART_CONTRACT_ROYALTIES.md  TOKENOMICS.md  package.json  package.json.backup
.github/workflows/: test.yml
apps/backend/prisma/: schema.prisma
apps/backend/src/controllers/: auction.controller.ts
apps/frontend/: package-lock.json  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/api/balance/: route.ts
apps/frontend/app/leap-status/: page.tsx
apps/frontend/app/simple/: page.tsx
apps/frontend/app/test/: page.tsx
apps/frontend/backup/: page.tsx
apps/frontend/components/: WalletConnector.tsx
apps/frontend/lib/: coreum.ts
apps/frontend/lib/wallets/: keplr.ts
apps/frontend/src/test/: leap-test.js
contracts/: MAINNET_CONFIG.txt
contracts/phoenix-escrow/: .gitignore  Cargo.toml
contracts/phoenix-escrow/src/: contract.rs  contract.rs.backup3  contract.rs.backup5  contract.rs.backup6  contract.rs.backup8  contract.rs.backup9  contract.rs.clean  lib.rs  msg.rs  state.rs
legal/archive/: COMMERCIAL_LICENSE_1.1.md  ENFORCEABLE_ROYALTY.md  SMART_CONTRACT_LICENSE.md
scripts/: check-consistency.sh  deploy-testnet.sh  fix_security_now.sh  test-auction-platform.sh  test-full-status.sh  update-github-repo.sh  update-progress.sh  update-to-github.sh  update_all_security.sh  update_nodemailer_safely.sh  use_test_wallet.sh
(+1 files in other folders)
