[package]
name = "phoenix-escrow"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["iterator"] }
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"  # ADDED: For contract versioning
schemars = "0.8.15"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.16.0"
